FIX some layout issues with drag icon

--- a/css/multivaluefield.css
+++ b/css/multivaluefield.css
@@ -1,4 +1,4 @@
-.multivaluefieldlist li { margin-bottom: 4px; }
-.multivaluefieldlist li::after { content: '↕'; cursor: pointer; }
-.multivaluefieldlist li:last-child { margin-bottom: 0; }
-.mventryfield { max-width: 200px !important; }
+.multivaluefieldlist > li { margin-bottom: 4px; width: 250px; }
+.multivaluefieldlist > li::after { content: '↕'; cursor: pointer; }
+.multivaluefieldlist > li:last-child { margin-bottom: 0; }
+.mventryfield { max-width: 200px !important; display: inline; }
